--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <springframework.version>4.3.3.RELEASE</springframework.version>
     <springsecurity.version>4.1.3.RELEASE</springsecurity.version>
     <hibernate.version>4.3.10.Final</hibernate.version>
+    <project.basedir>spring-security-jwt</project.basedir>
   </properties>
   <dependencies>
     <dependency>
@@ -90,11 +91,28 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <!--Test Junit-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${springframework.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.3.3</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.el</groupId>
+      <artifactId>javax.el-api</artifactId>
+      <version>2.2.4</version>
     </dependency>
   </dependencies>
   <build>
@@ -131,8 +149,38 @@
             <contextReloadable>true</contextReloadable>
           </configuration>
         </plugin>
+
+        <!--Test-->
+        <!--<plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+          <configuration>
+            <additionalClasspathElements>
+              <additionalClasspathElement>${project.basedir}/src/test/resources</additionalClasspathElement>
+            </additionalClasspathElements>
+          </configuration>
+        </plugin>-->
+        <!--Test-->
       </plugins>
     </pluginManagement>
+    <!--<resources>
+      <resource>
+        <directory>${project.basedir}/src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+    <testResources>
+      <testResource>
+        <directory>${project.basedir}/src/main/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+      <testResource>
+        <directory>${project.basedir}/src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>-->
+
   </build>
 
 </project>
